tests/baselines/reference/symbolProperty25.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty25.ts(5,7): error TS2420: Class 'C' incorrectly implements interface 'I'.
  Type 'C' is missing the following properties from type 'I': [Symbol.toPrimitive], [Symbol.toPrimitive]


==== tests/cases/conformance/es6/Symbols/symbolProperty25.ts (1 errors) ====
    interface I {
        [Symbol.toPrimitive]: () => boolean;
    }
    
    class C implements I {
          ~
!!! error TS2420: Class 'C' incorrectly implements interface 'I'.
!!! error TS2420:   Type 'C' is missing the following properties from type 'I': [Symbol.toPrimitive], [Symbol.toPrimitive]
        [Symbol.toStringTag]() {
            return "";
        }
    }